--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^3.1.3",
     "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
@@ -17,13 +19,16 @@
     "expo-facebook": "^12.2.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "^0.73.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-snap-carousel": "github:ram33z/react-native-snap-carousel",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
