--- a/package.json
+++ b/package.json
@@ -17,21 +17,25 @@
     "@react-navigation/material-top-tabs": "^6.6.10",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.7",
     "expo-facebook": "^12.2.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.73.2",
+    "react-native-cookies": "^3.3.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-snap-carousel": "github:ram33z/react-native-snap-carousel",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
