--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-cookies": "^3.3.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
