--- a/app.json
+++ b/app.json
@@ -1,16 +1,20 @@
 {
   "expo": {
     "name": "cleanscrapjunk",
-    "slug": "instafood-recipes-app",
+    "slug": "cleanscrapjankapp",
     "description": "React Native Recipes App Demo. Download source code for free at https://www.instamobile.io . You can also check out the Swift version at https://www.iosapptemplates.com and the Kotlin version at https://www.instakotlin.com .",
     "privacy": "public",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/cleanscrap.png",
     "userInterfaceStyle": "light",
-   
     "updates": {
       "fallbackToCacheTimeout": 0
+    },
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -22,10 +26,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.kavithavelpula.cleanscrapjunk"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "b420a4a0-264e-4098-9473-d1cf155cee97"
+      }
     }
   }
 }
