--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "^3.1.3",
+    "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/material-top-tabs": "^6.6.10",
@@ -19,23 +19,22 @@
     "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.7",
-    "expo-facebook": "^12.2.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "^0.73.2",
-    "react-native-cookies": "^3.3.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "github:ram33z/react-native-snap-carousel",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "^0.19.10",
+    "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
