--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/material-top-tabs": "^6.6.10",
-    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^2.2.1",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
@@ -27,6 +28,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
@@ -35,9 +37,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "react-redux": "^9.1.0",
-    "expo-updates": "~0.24.12",
-    "react-native-pager-view": "6.2.3"
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
